# stimabot_ros

./: README.md
astar_pathplanner/: CMakeLists.txt  LICENSE  package.xml  package_new.xml  package_old.xml
astar_pathplanner/config/: astar_pathplanner.yaml  goto_waypoint.yaml
astar_pathplanner/include/astar_pathplanner/: astar.hpp  astar_pathplanner.hpp  goto_waypoint.hpp
astar_pathplanner/launch/: astar_pathplanner.launch.py  empty_world.launch.py  goto_waypoint.launch.py  map_server.launch.py  maze.launch.py  path_planning.launch.py
astar_pathplanner/map/10x10/: map.pgm
astar_pathplanner/map/15x15/: map.pgm  map.yaml
astar_pathplanner/map/9x9/: map.pgm  map.yaml
astar_pathplanner/models/wall/: model.sdf
astar_pathplanner/rviz/: astar_pathplanner.rviz
astar_pathplanner/src/: astar.cpp  astar_pathplanner.cpp  goto_waypoint.cpp
astar_pathplanner/worlds/: maze.world  maze11.world
